--- a/src/pages/TimerApp/TimerApp.module.css
+++ b/src/pages/TimerApp/TimerApp.module.css
@@ -85,7 +85,7 @@
 
 .overlayBack {
   position: absolute;
-  top: 3.5rem;
+  top: 1.5rem;
   left: 2rem;
 }
 
